--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 
 <resources>
-    <string name="app_name">RethinkDNS</string>
-    <string name="app_name_brave">RethinkDNS</string>
+    <string name="app_name" translatable="false">RethinkDNS</string>
+    <string name="app_name_brave" translatable="false">RethinkDNS</string>
     <string name="title_about">About</string>
     <string name="title_settings">Settings</string>
     <string name="txt_im_topic">Internet Manager</string>
